Opened 12 years ago

Closed 12 years ago

#1094 closed defect (fixed)

ts: operation not permitted

Reported by: ami_stuff Owned by:
Priority: normal Component: avformat
Version: unspecified Keywords: mpegts
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description

http://ffmpeg.org/trac/ffmpeg/attachment/ticket/1059/599.png

C:\>ffmpeg -i 599.png out.ts
ffmpeg version N-38622-g1eabd71 Copyright (c) 2000-2012 the FFmpeg developers
  built on Mar  7 2012 00:18:03 with gcc 4.6.2
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-ru
ntime-cpudetect --enable-avisynth --enable-bzlib --enable-frei0r --enable-libope
ncore-amrnb --enable-libopencore-amrwb --enable-libfreetype --enable-libgsm --en
able-libmp3lame --enable-libopenjpeg --enable-librtmp --enable-libschroedinger -
-enable-libspeex --enable-libtheora --enable-libvo-aacenc --enable-libvo-amrwben
c --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --enable-
libxvid --enable-zlib
  libavutil      51. 42.100 / 51. 42.100
  libavcodec     54. 10.100 / 54. 10.100
  libavformat    54.  2.100 / 54.  2.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 63.100 /  2. 63.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0.  7.100 /  0.  7.100
  libpostproc    52.  0.100 / 52.  0.100
Input #0, image2, from '599.png':
  Duration: 00:00:00.04, start: 0.000000, bitrate: N/A
    Stream #0:0: Video: png, rgb24, 599x412, 25 tbr, 25 tbn, 25 tbc
File 'out.ts' already exists. Overwrite ? [y/N] y
Incompatible pixel format 'rgb24' for codec 'mpeg2video', auto-selecting format
'yuv420p'
[buffer @ 021619E0] w:599 h:412 pixfmt:rgb24 tb:1/1000000 sar:0/1 sws_param:
[buffersink @ 02161C60] auto-inserting filter 'auto-inserted scale 0' between th
e filter 'src' and the filter 'out'
[scale @ 021611E0] w:599 h:412 fmt:rgb24 -> w:599 h:412 fmt:yuv420p flags:0x4
[mpegts @ 026B0060] muxrate VBR, pcr every 2 pkts, sdt every 200, pat/pmt every
40 pkts
Output #0, mpegts, to 'out.ts':
  Metadata:
    encoder         : Lavf54.2.100
    Stream #0:0: Video: mpeg2video, yuv420p, 599x412, q=2-31, 200 kb/s, 90k tbn,
 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (png -> mpeg2video)
Press [q] to stop, [?] for help
frame=    1 fps=  0 q=1.9 Lsize=       5kB time=00:00:00.04 bitrate= 940.0kbits/
s
video:4kB audio:0kB global headers:0kB muxing overhead 17.177761%
C:\>ffmpeg -i out.ts
ffmpeg version N-38622-g1eabd71 Copyright (c) 2000-2012 the FFmpeg developers
  built on Mar  7 2012 00:18:03 with gcc 4.6.2
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-ru
ntime-cpudetect --enable-avisynth --enable-bzlib --enable-frei0r --enable-libope
ncore-amrnb --enable-libopencore-amrwb --enable-libfreetype --enable-libgsm --en
able-libmp3lame --enable-libopenjpeg --enable-librtmp --enable-libschroedinger -
-enable-libspeex --enable-libtheora --enable-libvo-aacenc --enable-libvo-amrwben
c --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --enable-
libxvid --enable-zlib
  libavutil      51. 42.100 / 51. 42.100
  libavcodec     54. 10.100 / 54. 10.100
  libavformat    54.  2.100 / 54.  2.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 63.100 /  2. 63.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0.  7.100 /  0.  7.100
  libpostproc    52.  0.100 / 52.  0.100
out.ts: Operation not permitted

Change History (3)

comment:1 by Mike, 12 years ago

Analyzed by developer: set
Component: undeterminedavformat
Reproduced by developer: set
Status: newopen

This looks like a bug in mpegts_read_header(). If the input file is smaller than 8 kbytes, the function just gives up and fails.

I see no good reason it should be coded this way.

comment:2 by Carl Eugen Hoyos, 12 years ago

Keywords: mpegts added

comment:3 by Michael Niedermayer, 12 years ago

Resolution: fixed
Status: openclosed

fixed locally

Note: See TracTickets for help on using tickets.